<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_eaeaea"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/tv_home"
                style="@style/main_bottom_text"
                android:drawableTop="@drawable/navigation_home"
                android:text="@string/main_home"
                />

            <TextView
                android:id="@+id/tv_market"
                style="@style/main_bottom_text"
                android:drawableTop="@drawable/navigation_main_market"
                android:text="@string/main_market"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="33dp"
                android:id="@+id/iv_open"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_lock"/>

            <TextView
                android:id="@+id/tv_neighbour"
                style="@style/main_bottom_text"
                android:drawableTop="@drawable/navigation_main_neighbour"
                android:text="@string/main_neighbour"/>

            <TextView
                android:id="@+id/tv_user"
                style="@style/main_bottom_text"
                android:drawableTop="@drawable/navigation_main_user"
                android:text="@string/main_user"
                />


        </LinearLayout>

    </FrameLayout>

</LinearLayout>
