<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_ffffff"
    tools:context="com.ovov.lfzj.home.repair.RepairCommentActivity">

    <include layout="@layout/include_title_text"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_444444"
        android:textSize="@dimen/textSize_15sp"
        android:text="@string/text_comment_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:textSize="@dimen/textSize_15sp"
        android:textColor="@color/color_444444"
        android:hint="@string/please_comment_repair"
        android:layout_marginTop="@dimen/padding_15dp"
        android:layout_marginLeft="18dp"
        android:gravity="top|left"
        android:id="@+id/et_content"
        android:textColorHint="@color/color_text_a1a1a1"
        android:background="@color/color_ffffff"
        android:layout_marginRight="18dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_5dp"
        android:background="@color/color_efefef"
        android:layout_marginTop="@dimen/margin_10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_444444"
            android:textSize="@dimen/textSize_15sp"
            android:text="@string/repair_speed"
            android:layout_marginTop="@dimen/padding_15dp"
            android:layout_marginLeft="18dp"/>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_15dp"
            android:numStars="5"
            style="@style/mRatingBar"
            android:rating="5"
            android:stepSize="1"
            android:id="@+id/rating_speed"
            android:layout_marginLeft="@dimen/padding_12dp"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_444444"
            android:textSize="@dimen/textSize_15sp"
            android:text="@string/service_attitude"
            android:layout_marginTop="@dimen/padding_15dp"
            android:layout_marginLeft="18dp"/>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_15dp"
            android:numStars="5"
            style="@style/mRatingBar"
            android:rating="5"
            android:id="@+id/rating_attitude"
            android:stepSize="1"
            android:layout_marginLeft="@dimen/padding_12dp"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_444444"
            android:textSize="@dimen/textSize_15sp"
            android:text="@string/repair_technology"
            android:layout_marginTop="@dimen/padding_15dp"
            android:layout_marginLeft="18dp"/>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_15dp"
            android:numStars="5"
            style="@style/mRatingBar"
            android:id="@+id/rating_technology"
            android:rating="5"
            android:stepSize="1"
            android:layout_marginLeft="@dimen/padding_12dp"

            />
    </LinearLayout>

</LinearLayout>
