<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="昵称"
        android:id="@+id/tv_nickname"
        android:textSize="@dimen/textSize_15sp"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        android:textColor="@color/color_444444"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_register_time"
        android:layout_below="@+id/tv_nickname"
        android:id="@+id/tv_time"
        android:textSize="@dimen/textSize_12sp"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:textColor="@color/color_444444"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_register_status"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/dp_10"
        android:id="@+id/tv_status"
        android:textSize="@dimen/textSize_12sp"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        android:textColor="@color/color_444444"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_phone_recommend"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/dp_10"
        android:id="@+id/tv_phone"
        android:layout_below="@id/tv_nickname"
        android:textSize="@dimen/textSize_12sp"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:textColor="@color/color_444444"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_1dp"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@color/common_drivder_line"
        android:layout_marginTop="@dimen/padding_10dp"
        android:layout_below="@id/tv_phone"/>

</RelativeLayout>