<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/ic_login_back"
    tools:context="com.ovov.lfzj.login.LoginActivity">

    <ImageView
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_87"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="108dp"
        android:src="@mipmap/ic_logo_appname"/>
    <ImageView
        android:layout_width="@dimen/dp_265"
        android:layout_height="@dimen/dp_26"
        android:src="@mipmap/ic_login_text"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:orientation="horizontal"
        android:background="@drawable/shape_login_edit"
        android:layout_marginLeft="@dimen/dp_48"
        android:layout_marginRight="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_50">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_phone"
            android:layout_marginLeft="8dp"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/edit_phone_hint"
            android:textColor="@color/color_444444"
            android:background="#00000000"
            android:id="@+id/et_phone"
            android:inputType="phone"
            android:layout_marginLeft="@dimen/dp_18"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:orientation="horizontal"
        android:background="@drawable/shape_login_edit"
        android:layout_marginLeft="@dimen/dp_48"
        android:layout_marginRight="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_15">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_pwd"
            android:layout_marginLeft="8dp"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/edit_pwd_hint"
            android:textColor="@color/color_444444"
            android:background="#00000000"
            android:id="@+id/et_pwd"
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/dp_18"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_login"
        android:textSize="@dimen/common_text_size_big"
        android:layout_marginTop="@dimen/dp_28"
        android:layout_marginRight="@dimen/dp_48"
        android:layout_marginLeft="@dimen/dp_48"
        android:paddingTop="@dimen/dp_13"
        android:paddingBottom="@dimen/dp_13"
        android:background="@drawable/shape_login_text"
        android:gravity="center"
        android:id="@+id/tv_login"
        android:textColor="@color/color_ffffff"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_45"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_user_register"
            android:textColor="@color/color_444444"
            android:id="@+id/tv_to_register"
            android:textSize="@dimen/common_text_size_big"/>
        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="17dp"
            android:layout_gravity="center_vertical"
            android:background="@color/color_444444"
            android:layout_marginLeft="@dimen/dp_5" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_find_pwd"
            android:textColor="@color/color_444444"
            android:id="@+id/tv_find_pwd"
            android:layout_marginLeft="@dimen/dp_5"
            android:textSize="@dimen/common_text_size_big"/>
    </LinearLayout>
</LinearLayout>
