<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_dentity"
    tools:context="com.ovov.lfzj.login.IdentitySelectActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_owner"
                android:layout_width="@dimen/dp_74"
                android:layout_height="@dimen/dp_74"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_150"
                android:src="@drawable/identity_owner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_15"
                android:text="@string/text_me_owner"
                android:textColor="@color/color_444444"
                android:textSize="@dimen/sp_14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_50"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_seller"
                        android:layout_width="@dimen/dp_74"
                        android:layout_height="@dimen/dp_74"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/identity_seller" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/dp_15"
                        android:text="@string/text_me_seller"
                        android:textColor="@color/color_444444"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_property"
                        android:layout_width="@dimen/dp_74"
                        android:layout_height="@dimen/dp_74"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/identity_property" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/dp_15"
                        android:text="@string/text_me_property"
                        android:textColor="@color/color_444444"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_48"
                android:layout_marginRight="@dimen/dp_48"
                android:layout_marginTop="@dimen/dp_50"
                android:background="@drawable/shape_next_text"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/dp_14"
                android:paddingTop="@dimen/dp_14"
                android:text="@string/common_next"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/sp_17" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/color_444444"
                android:text="跳过"
                android:id="@+id/tv_skip"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_25"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_25">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@mipmap/ic_select" />

                <ImageView
                    android:id="@+id/iv_confirm"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@drawable/service_select" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_service"
                    android:textSize="12sp"
                    android:layout_toRightOf="@+id/iv_confirm"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_centerVertical="true"
                    android:id="@+id/tv_service"
                    android:textColor="@color/color_444444"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_service_title"
                    android:textSize="12sp"
                    android:layout_toRightOf="@+id/tv_service"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_centerVertical="true"
                    android:id="@+id/tv_service_title"
                    android:textColor="@color/colorPrimary"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
